// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Transaction cannot be implemented 1`] = `
"snippetCode.ts (4,13): Class 'MyTransaction' incorrectly implements interface 'Transaction'.
  Type 'MyTransaction' is missing the following properties from type 'Transaction': hash, version, nonce, sender, and 6 more.

      2 |       import { Transaction } from '@neo-one/smart-contract';
      3 | 
    > 4 |       class MyTransaction implements Transaction {
        |             ^
      5 |       }
      6 |     
"
`;

exports[`Transaction invalid "reference" 1`] = `
"snippetCode.ts (4,31): Builtin properties cannot be referenced

      2 |       import { Transaction } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Transaction['for'];
        |                               ^
      5 |     
"
`;

exports[`Transaction invalid reference - object 1`] = `
"snippetCode.ts (4,15): Builtin properties cannot be referenced

      2 |       import { Transaction } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const { for } = Transaction;
        |               ^
      5 |     
"
`;

exports[`Transaction invalid reference 1`] = `
"snippetCode.ts (4,31): Builtin properties cannot be referenced

      2 |       import { Transaction } from '@neo-one/smart-contract';
      3 | 
    > 4 |       const for = Transaction.for;
        |                               ^
      5 |     
"
`;
